# random-terraform

./: LICENSE  README.md
chainlink-node-infra/: main.tf  providers.tf  terraform.tfvars  variables.tf
lambda/log-trigger-lambda/: lambda_function.py  main.tf  provider.tf  terraform.tfvars  variables.tf
python/read-base64-gzipped-string/: pyproject.toml
python/read-base64-gzipped-string/read_base64_gzipped_string/: main.py
python/read-base64-gzipped-string/read_base64_gzipped_string/data/: 1.json  2.json
